--- a/client/src/app/nav/nav-logged/nav-logged.component.html
+++ b/client/src/app/nav/nav-logged/nav-logged.component.html
@@ -1,15 +1,35 @@
+<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
+<!--  <a class="navbar-brand" style="color:white;">Drinki</a>-->
+<!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--    <span class="navbar-toggler-icon"></span>-->
+<!--  </button>-->
+<!--  <div class="collapse navbar-collapse" id="navbarColor02">-->
+<!--    <ul class="navbar-nav mr-auto">-->
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link" (click)="logout()">Wyloguj się <span class="sr-only">(current)</span></a>-->
+<!--      </li>-->
+<!--      <li class="nav-item active" *ngIf="auth.isUser()">-->
+<!--        user-->
+<!--      </li>-->
+<!--      <li class="nav-item active" *ngIf="auth.isAdmin()">-->
+<!--        admin-->
+<!--      </li>-->
+<!--    </ul>-->
+<!--  </div>-->
+<!--</nav>-->
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" style="color:white;">Drinki</a>
+  <a class="navbar-brand" style="color:white; margin-left: 5%;">Drinki</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarColor02">
+  <div class="collapse navbar-collapse" id="navbarColor02" style="margin-right: 5%;">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-<!--        <a class="nav-link" (click)="onOpenModalLogin()">Sign in <span class="sr-only">(current)</span></a>-->
+        <!--        <a class="nav-link" (click)="onOpenModalLogin()">Sign in <span class="sr-only">(current)</span></a>-->
         <a class="nav-link" (click)="logout()">Wyloguj się <span class="sr-only">(current)</span></a>
       </li>
-<!--      <li class="nav-item active" *ngIf="userHasRole('USER')">-->
+      <!--      <li class="nav-item active" *ngIf="userHasRole('USER')">-->
       <li class="nav-item active" *ngIf="auth.isUser()">
         <!--        <a class="nav-link" (click)="onOpenModalLogin()">Sign in <span class="sr-only">(current)</span></a>-->
         user
