--- a/client/src/app/welcomepage/welcomepage.component.html
+++ b/client/src/app/welcomepage/welcomepage.component.html
@@ -1,13 +1,13 @@
-<div id="przykladowaKaruzela2" class="carousel slide 300-px-wide" data-ride="carousel">
+<div id="przykladowaKaruzela2" class="carousel slide" data-ride="carousel" style="margin-top: 15px;">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="../../assets/img/bar1.png" alt="Pierwszy slajd">
+      <img class="d-block w-100" src="../../assets/img/1xx.png" alt="Pierwszy slajd">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="../../assets/img/bar3.png" alt="Drugi slajd">
+      <img class="d-block w-100" src="../../assets/img/2xx.png" alt="Drugi slajd">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="../../assets/img/barman3.jpeg" alt="Trzeci slajd">
+      <img class="d-block w-100" src="../../assets/img/4xx.png" alt="Trzeci slajd">
     </div>
   </div>
   <a class="carousel-control-prev" href="#przykladowaKaruzela2" role="button" data-slide="prev">
